@@ -22,6 +22,7 @@ version 0.7.0:
   - Samba 3 support
   - initial Cocoa support (Pierre d'Herbemont)
   - generic FPU emulation code
+  - Virtual PC read-only disk image support (Alex Beregszaszi)
 
 version 0.6.1:
 
